--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
     <video autoplay="true" width="500" height="375" id="videoElement" class="videoElement">
      
     </video>
+    <canvas id="overlay" class="overlay" width="500" height="375"></canvas>
     <button id="start-button">start emojification</button>
+
+    <!-- hidden images -->
+    <img src="img/happy.png" id="happy" hidden>
+    <img src="img/angry.png" id="angry" hidden>
+    <img src="img/surprised.png" id="surprised" hidden>
+    <img src="img/sad.png" id="sad" hidden>
   </div>
 
   <script src="js/lib/jquery-2.1.3.min.js"></script>
+  <script src="js/lib/underscore-min.js"></script>
   <script src="js/lib/clmtrackr.min.js"></script>
   <script src="js/lib/model_pca_20_svm.js"></script>
   <script src="js/lib/emotion_classifier.js"></script>
