fix imgWidth to take into account rotation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      
     </video>
     <canvas id="overlay" class="overlay" width="500" height="375"></canvas>
-    <button id="start-button">start emojification</button>
+    <button id="start-button" hidden>start emojification</button>
 
     <!-- hidden images -->
     <img src="img/happy.png" id="happy" hidden>
